--- a/templates/index.html
+++ b/templates/index.html
@@ -200,7 +200,7 @@
     </div>
 
     <script>
-        const socket = io.connect('http://127.0.0.1:5000');
+        const socket = io.connect('https://ffmpegaudiobridge.onrender.com');
         const audioContainer = document.getElementById('audioContainer');
         const summaryContainer = document.getElementById('summaryContainer');
         let audioReferences = {};
